--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>WRITR</title>
         <link rel="stylesheet" href="css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
@@ -22,18 +23,20 @@
                     
                     <h1>Letting you <b>write</b> and <b>share</b><br/> your stories with  the world</h1> 
 
-                    <a href="#">
-                        <div class="join">
-                            <h3>JOIN THE COMMUNITY</h3>
-                        </div>
-                    </a>
+                    <div class="center">
+                        <a href="#">
+                            <div class="join">
+                                <h3>JOIN THE COMMUNITY</h3>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
         
         <div class="blue-container">
             <div class="container un-skew">
-                <h3>POPULAR</h3>
+                <h2>POPULAR</h2>
                 <ul class="books">
                     <li class="book"><a href="#">book 1</a></li>
                     <li class="book"><a href="#">book 2</a></li>
@@ -45,7 +48,7 @@
 
         <div class="yellow-container">
             <div class="container un-skew">
-                <h3>NEW</h3>
+                <h2>NEW</h2>
                 <ul class="books">
                     <li class="book"><a href="#">book 1</a></li>
                     <li class="book"><a href="#">book 2</a></li>
@@ -57,7 +60,7 @@
 
         <div class="red-container">
             <div class="container un-skew">
-                <h3>FOR YOU</h3>
+                <h2>FOR YOU</h2>
                 <ul class="books">
                     <li class="book"><a href="#">book 1</a></li>
                     <li class="book"><a href="#">book 2</a></li>
