--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <h3>CONTACT US</h3>
                 <div class="twitter">
-                    <img src="images/twitter_img.png" alt="Our twitter">
+                    <a href="https://twitter.com/rovi_rovi_rovi"><img src="images/twitter_img.png" alt="Our twitter"></a>
                     <p>@rovi_rovi_rovi</p>
                 </div>
                 <p>some_email@gmail.com</p>
